# sisyphus

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: build_firmware.yml  pages.yml
3D/: sisyphus.FCStd
3D/STLs/: sisyphus-Assembled-Hinge-Lid.stl  sisyphus-Bottom.stl  sisyphus-Core.stl  sisyphus-Grille.stl  sisyphus-Hinge.stl  sisyphus-Key_Cap.stl  sisyphus-Lid.stl  sisyphus-Lock.stl  sisyphus-M3_spacer.stl  sisyphus-Side_Cover.stl  sisyphus-Spring.stl  sisyphus-Switch.stl  sisyphus-Switch_holder.stl  sisyphus-Top.stl  sisyphus-Top_Cover.stl  sisyphus-spring.stl
PCBs/: sisyphus.kicad_sym
PCBs/rgb_sensor/: fp-lib-table  rgb_sensor.kicad_pcb  rgb_sensor.kicad_pro  rgb_sensor.kicad_sch  sym-lib-table
PCBs/rgb_sensor/rgb_sensor.pretty/: SMD_L3328_VIS.kicad_mod
PCBs/rgb_sensor/rgb_sensor_3d/: README.md
PCBs/rgb_sensor/rgb_sensor_3d/VEML3328/: 80216oplga4l.stp
PCBs/sisyphus/: peripheral.kicad_sch  power.kicad_sch  sisyphus.kicad_pcb  sisyphus.kicad_pro  sisyphus.kicad_sch  sisyphus.kicad_sym  sym-lib-table
PCBs/sisyphus_matrix/: fp-lib-table  sisyphus.kicad_sym  sisyphus_matrix.kicad_pro  sisyphus_matrix.kicad_sch  sym-lib-table
audio-processing/: .gitignore  wav-to-header.py
src/: .clangd  CMakeLists.txt  PROTOCOL.md  README.md  main.c  memmap_custom.ld  memmap_eternity.ld.template  sisyphus_reset.sh  wav_samples.h
src/audio/: audio.c  audio.h
src/battery/: CMakeLists.txt
src/battery/charger/: CMakeLists.txt
src/battery/charger/bq25619/: CMakeLists.txt  bq25619.c  bq25619.h  bq25619_specific.h
src/boards/: plajta_sisyfoss_beta.h
src/color/: README.md  color.c  color.h
src/color/sensors/: CMakeLists.txt
src/color/sensors/veml3328/: CMakeLists.txt  veml3328.c  veml3328.h
src/keyboard/: CMakeLists.txt
src/keyboard/tca8418/: CMakeLists.txt  tca8418.c  tca8418.h
src/protocol/: PROTOCOL.md  README.md  calibrator.py  client.py  color_graph.py  convert.py  protocol.c  protocol.h  protocol.py  requirements.txt  shell.py
src/usb/: tusb_config.h  usb_descriptors.c
src/util/: CMakeLists.txt  littlefs-pico.c  littlefs-pico.h
src/util/error/: CMakeLists.txt  error.h
src/util/lightshow/: CMakeLists.txt  lightshow.c  lightshow.h
src/util/littlefs-pico/: littlefs-pico.c  littlefs-pico.h
src/util/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h  ws2812.pio
web/: .editorconfig  components.json  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml
web/actions/button/: edit.ts
web/actions/sheet/: create.ts  export.ts  upload.ts
web/app/: globals.css  page.tsx
web/app/(dashboard)/: layout.tsx  page.tsx
web/app/api/file/[id]/: route.ts
web/app/dashboard/: layout.tsx  page.tsx
web/app/dashboard/configuration/sheet/[sheetId]/: layout.tsx  page.tsx
web/app/dashboard/configuration/sheet/[sheetId]/@dialogs/(.)dialog/button/[id]/: page.tsx
web/app/dashboard/configuration/sheet/[sheetId]/@dialogs/(.)dialog/sheet/new/: page.tsx
web/app_disabled_configruation/sheet/[sheetId]/: page.tsx
web/app_disabled_configruation/sheet/[sheetId]/dialog/[...catchAll]/: page.tsx
web/components/: app-sidebar.tsx  button-card.tsx  configuration-actions.tsx  dialog-wrapper.tsx  export-sheet-button.tsx  form-wrapper.tsx  image-card.tsx  nav-actions.tsx  nav-main.tsx  page-breadcrumb.tsx  serial.tsx  voice-button.tsx  voice-recorder.tsx  zip-reader.tsx
web/components/ui/: button.tsx  input.tsx  sidebar.tsx
web/hooks/: useEternityClient.ts
web/prisma/: schema.prisma
web/prisma/migrations/20250315052009_init/: migration.sql
web/prisma/migrations/20250315053127_file_bez_cesty/: migration.sql
web/prisma/migrations/20250315053339_neumim_psat/: migration.sql
web/prisma/migrations/20250315091923_sheet_rodic_tlacitka/: migration.sql
web/prisma/migrations/20250315152140_file_nevazat_k_tlacitku/: migration.sql
web/store/: useConfigurationStore.ts  useDeviceStore.ts
